--- a/torte-compleanno.html
+++ b/torte-compleanno.html
@@ -57,7 +57,7 @@
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 cell">
     			<h1 class="first-paragraph-no-hero">Torte Compleanno</h1>
-    			<p>Forniamo candeline standard. Se volete potete portare da fuori candele di vostro gradimento.</p>
+    			<p>Forniamo candeline standard. Se volete, potete portare da fuori candele di vostro gradimento.</p>
     		</div>
     	</div>
     </div>
