--- a/torte-compleanno.html
+++ b/torte-compleanno.html
@@ -52,11 +52,11 @@
     	</ul>
     </nav>
     <style>.card{margin-bottom:0.5rem;}</style>
-    <!-- <header><img src="assets/img/cover/cover-menu-hamburgers.jpeg" alt="Ca' Vecchia Beerstrot Menù"/></header> -->
+    <header><img src="assets/img/cover/cover-torte-compleanno.jpg" alt="Ca' Vecchia Beerstrot Torte Compleanno"/></header>
     <div class="grid-container">
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 cell">
-    			<h1 class="first-paragraph-no-hero">Torte Compleanno</h1>
+    			<h1 class="first-paragraph">Torte Compleanno</h1>
     			<p>Forniamo candeline standard. Se volete, potete portare da fuori candele di vostro gradimento.</p>
     		</div>
     	</div>
