--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
     				<section id="fotoMenu" class="splide extra-space-image-tab-home" aria-label="Immagini menù di Ca' Vecchia Beerstrot">
     					<div class="splide__track">
     						<ul class="splide__list grid-margin-y">
+    							<li class="splide__slide"><img src="assets/img/slider/RollGamberoSalmone.jpg" alt="Roll Gambero e Salmone"></li>
+    							<li class="splide__slide"><img src="assets/img/slider/HamburgerNorma.jpg" alt="Hamburger Norma"></li>
+    							<li class="splide__slide"><img src="assets/img/slider/NigiriSalmone.jpg" alt="Nigiri Salmone"></li>
     							<li class="splide__slide"><img src="assets/img/prod/HosomakiSpecialSalmone_rettangolare.jpg" alt="Hosomaki Special Salmon"></li>
     							<li class="splide__slide"><img src="assets/img/prod/RollGamberoeSalmone_rettangolare.jpg" alt="Roll Gambero Salmone"></li>
     							<li class="splide__slide"><img src="assets/img/prod/RollMandorle_rettangolare.jpg" alt="Roll Mandorle"></li>
@@ -139,6 +142,7 @@
     							<li class="splide__slide"><img src="assets/img/prod/Falafel_rettangolare.jpg" alt="Falafel"></li>
     							<li class="splide__slide"><img src="assets/img/prod/BocconcinidiPollo_rettangolare.jpg" alt="Bocconcini di Pollo"></li>
     							<li class="splide__slide"><img src="assets/img/prod/Blondie_rettangolare.jpg" alt="Blondie"></li>
+    							<li class="splide__slide"><img src="assets/img/prod/Crumble_rettangolare.jpg" alt="Crumble"></li>
     							<li class="splide__slide"><img src="assets/img/prod/Cheesecake_rettangolare.jpg" alt="Cheesecake"></li>
     							<li class="splide__slide"><img src="assets/img/prod/Birramisu_rettangolare.jpg" alt="Birramisu"></li>
     						</ul>
@@ -192,6 +196,7 @@
           						</li>
           						<li class="splide__slide"><img src="assets/img/location/aia-drone.jpg"></li>
           						<li class="splide__slide"><img src="assets/img/location/esterno-vista-filottrano.jpg"></li>
+          						<li class="splide__slide"><img src="assets/img/slider/CaVecchiaEstivo.jpg"></li>
     							<li class="splide__slide"><img src="assets/img/cover/cover-chi-siamo.jpeg"></li>
     							<li class="splide__slide"><img src="assets/img/location/insegna.jpg"></li>
     							<li class="splide__slide"><img src="assets/img/location/interno.jpg"></li>
@@ -199,6 +204,7 @@
     							<li class="splide__slide"><img src="assets/img/location/soffitta-luci.jpg"></li>
     							<li class="splide__slide"><img src="assets/img/location/casetta.jpg"></li>
     							<li class="splide__slide"><img src="assets/img/location/casetta-lato.jpg"></li>
+    							<li class="splide__slide"><img src="assets/img/slider/TramontoCaVecchiaBeerstrot.jpg"></li>
     							<li class="splide__slide"><img src="assets/img/location/container.jpg"></li>
     							<li class="splide__slide"><img src="assets/img/video/poster/container-presentation.jpg"></li>
     						</ul>
