--- a/menu.html
+++ b/menu.html
@@ -1004,7 +1004,7 @@
     				</div>
     			</div>
     			<div class="small-12 cell">
-    				<h2>Vino<small>Bottigia | Calice</small></h2>
+    				<h2>Vino<small>Bottiglia | Calice</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
     					<div class="cell">
     						<div class="card">
