--- a/menu.html
+++ b/menu.html
@@ -1175,14 +1175,14 @@
     			<div class="small-12 cell">
     				<h2>Whiskey</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Scallywag<span class="price ">8</span></h3>
     								<p class="">Scozzese blend 46%. L&#x27;iniziale dolcezza lascia spazio a note piccanti e speziate.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
