--- a/menu.html
+++ b/menu.html
@@ -1141,6 +1141,14 @@
     							</div>
     						</div>
     					</div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Sake<span class="price ">4</span></h3>
+                                    <p class=""><span class="hide"><br><small>Allergeni: </small></span></p>
+                                </div>
+                            </div>
+                        </div>
     				</div>
     			</div>
     			<div class="small-12 cell">
