--- a/menu.html
+++ b/menu.html
@@ -946,14 +946,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Californication 50cl<span class="price ">6</span></h3>
                                     <p class="">West Coast IPA 6,3%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
