--- a/menu.html
+++ b/menu.html
@@ -657,7 +657,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Blondie_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Blondie">
     								<h3>Blondie<span class="price ">5</span></h3>
-    								<p>Brownie con nocciole. Servito con crema al mascarpone e rhum.<span class=""><br><small>Allergeni: Frutta a Guscio, Glutine, Latte, Uova</small></span></p>
+    								<p>Brownie con nocciole. Servito con crema chantilly.<span class=""><br><small>Allergeni: Frutta a Guscio, Glutine, Latte, Uova</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -938,14 +938,14 @@
     							</div>
     						</div>
     					</div> -->
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Marina 50cl<span class="price ">6</span></h3>
                                     <p class="">American Pale Ale 6,4%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
