--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     				<br>
     			</div>
     			<div class="medium-6 cell small-order-2 medium-order-1">
-    				<p>A <strong>Ca' Vecchia Beerstrot</strong> siamo specialisti in Sushi e Hamburger Goduriosi e Birra Artigianale, ma quella buona. A partire dal 2023, dopo mesi di sperimentazione, introduciamo anche lo street food per eccellenza in Giappone: il Sushi.</p>
+    				<p>A <strong>Ca' Vecchia Beerstrot</strong> siamo specialisti in Sushi, Hamburger Goduriosi e Birra Artigianale, ma quella buona. A partire dal 2023, dopo mesi di sperimentazione, introduciamo anche lo street food per eccellenza in Giappone: il Sushi.</p>
     				<p>Gli Hamburger, di nostra produzione, contengono solo carne di prima scelta e l'arte della perfetta macinatura. Per creare i nostri Hamburger utilizziamo verdure di stagione e prodotti di piccole realtà marchigiane.</p>
     				<p>Il Sushi, anch'esso di nostra produzione, è fatto con il miglior pesce, il miglior riso giapponese e un tocco di marchigianità che rende unica l'esperienza.</p>
     				<p>Per le Birre Artigianali, collaboriamo con micro birrifici marchigiani di comprovata qualità: Birrificio dei Castelli, Mukkeller, MC-77, Resina.</p>
