--- a/checkout.html
+++ b/checkout.html
@@ -63,7 +63,7 @@
                 <div class="grid-x grid-margin-x grid-margin-y">
                     <div class="small-12 xlarge-8 cell ">
                         <h2>Orario ritiro asporto</h2>
-                        <p>Orario scelto: <strong id="chosen-time">19.15</strong></p>
+                        <p>Orario scelto: <strong id="chosen-time"></strong></p>
                         <p>Scegli o modifica l'orario:</p>
                         <div class="grid-x small-up-4 align-center extra-space">
                             <div class="cell">
@@ -124,15 +124,15 @@
             <div class="small-12 medium-6 cell">
                 <h2>Riepilogo ordine</h2>
                 <div class="clearfix">
-                  <div id="itens-carrello-checkout">
-                  </div>
-                  	<div class="checkout-summary-details">
-                	    <div>
-                	      	<h1 class="titolo-item">TOTALE:</h1>
-                	    </div>
-                	    <div class="item-price">
-                	      	<h1 class="titolo-item" id="checkout-total"> €&ensp;0</h1>
-                	    </div>
+                	<div id="itens-carrello-checkout">
+                	</div>
+                	<div class="checkout-summary-details">
+                		 <div>
+                			 <h1 class="titolo-item">TOTALE:</h1>
+                		</div>
+                		<div class="item-price">
+                			<h1 class="titolo-item" id="checkout-total"> €&ensp;0</h1>
+                		</div>
                 	</div>
                 </div>
             </div>
@@ -263,7 +263,6 @@
             </div>
         </footer>
     </div>
-
     <footer class="panel-footer">
     	<div class="grid-container">
     		<div class="grid-x grid-margin-x grid-margin-y small-up-2 large-up-4">
