--- a/index.html
+++ b/index.html
@@ -99,11 +99,6 @@
     					<li><span>Sabato:</span><time>19 - 21:45</time></li>
     					<li><span>Domenica:</span><time>19 - 21:45</time></li>
     				</ul>
-    				<!-- <p style="margin-bottom: 0px;" >Nota bene:</p>
-    				<ul class="disc">
-    				<li>Dato l'elevato afflusso di ospiti al ristorante, nei mesi di luglio e agosto non riusciamo a garantire asporti dopo le 19.30.</li>
-    				<li>In caso di pioggia o minaccia di pioggia il ristorante è chiuso anche per gli asporti.</li>
-    				</ul> -->
     				<span class="extra-space"><a href="asporto.html" class="button left">Ordina da Asporto</a></span>
     			</div>
     		</div>
@@ -165,7 +160,7 @@
     		</div>
     		<div class="grid-x grid-margin-x grid-margin-y">
     			<div class="medium-6 cell">
-    				<a href="asporto"><img src="assets/img/cover/cover-asporto.jpg" alt="Una nuova Armonia da Asporto. Sushi e Hamburger" class="extra-space-image-tab-home"></a>
+    				<a href="asporto"><img src="assets/img/cover/cover-asporto.jpg" alt="Una nuova Armonia da Asporto. Sushi e Hamburger." class="extra-space-image-tab-home"></a>
     			</div>
     			<div class="medium-6 cell">
     				<p>Stai guardando la tua serie tv preferita da sola o con le amiche e gli amici e hai voglia di mettere qualcosa sotto i denti? Stai tifando per la tua squadra del cuore e ti è venuto un certo languore?</p>
@@ -350,7 +345,6 @@
             </div>
         </footer>
     </div>
-
     <footer class="panel-footer">
     	<div class="grid-container">
     		<div class="grid-x grid-margin-x grid-margin-y small-up-2 large-up-4">
