--- a/menu.html
+++ b/menu.html
@@ -954,14 +954,14 @@
                                 </div>
                             </div>
                         </div> -->
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Ridopoco 50cl<span class="price ">6</span></h3>
     								<p class="">American Pale Ale 6,2%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
