--- a/menu.html
+++ b/menu.html
@@ -954,14 +954,30 @@
                                 </div>
                             </div>
                         </div> -->
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Assaggio Solo 50cl<span class="price ">6</span></h3>
+                                    <p class="">American Pale Ale 5,5%. Birrificio Mukkeller. Birra esplosiva facile da bere.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Ridopoco 50cl<span class="price ">6</span></h3>
-    								<p class="">American Pale Ale 6,2%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
+    								<p class="">American Pale Ale 6,2%. Birrificio Mukkeller. Corpo leggero, massiccia luppolatura.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
     					</div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Mazzu de Fiuri 50cl<span class="price ">6</span></h3>
+                                    <p class="">American Pale Ale 5,5%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1046,14 +1062,14 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Gewurztraminer doc<span class="price ">20</span></h3>
     								<p class="">Cantina H.Lun. Un inconfondibile bouquet speziato dal sentore di rose e frutta secca, una corposità generosa e un gusto pieno e intenso caratterizzano questo tipico vino bianco dell&#x27;Alto Adige.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
