--- a/menu.html
+++ b/menu.html
@@ -902,7 +902,7 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Landbier 1857 50cl<span class="price ">6</span></h3>
-    								<p class="">Helles tedesca non filtrata 5,3%. Birrificio Bayreuther.<span class=""><br><small>Allergeni: glutine</small></span></p>
+    								<p class="">Birrificio Bayreuther. Helles export tedesca 5,3%.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -918,7 +918,7 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Weisse 50cl<span class="price ">6</span></h3>
-    								<p class="">Weisse tedesca 5,1%. Birrificio Maisel.<span class=""><br><small>Allergeni: glutine</small></span></p>
+    								<p class="">Birrificio Maisel. Weisse tedesca 5,1%. Bionda con prevalenti note di banana.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -926,7 +926,7 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Poculator 50cl<span class="price ">6</span></h3>
-    								<p class="">Rossa tedesca 7,6%. Birrificio Scheyern.<span class=""><br><small>Allergeni: glutine</small></span></p>
+    								<p class="">Birrificio Scheyern. Rossa tedesca 7,6%.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -958,7 +958,7 @@
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Assaggio Solo 50cl<span class="price ">6</span></h3>
-                                    <p class="">American Pale Ale 5,5%. Birrificio Mukkeller. Birra esplosiva facile da bere.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                    <p class="">Birrificio Mukkeller. America pale ale 5,5%. Birra esplosiva facile da bere.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
                         </div>
@@ -966,7 +966,7 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Ridopoco 50cl<span class="price ">6</span></h3>
-    								<p class="">American Pale Ale 6,2%. Birrificio Mukkeller. Corpo leggero, massiccia luppolatura.<span class=""><br><small>Allergeni: glutine</small></span></p>
+    								<p class="">Birrificio Mukkeller. America pale ale 6,2%. Corpo leggero, massiccia luppolatura.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -974,7 +974,7 @@
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Mazzu de Fiuri 50cl<span class="price ">6</span></h3>
-                                    <p class="">American Pale Ale 5,5%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                    <p class="">Birrificio Mukkeller. IPA 6%. Birra bionda dall'amaro persistente e speziato.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
                         </div>
@@ -982,7 +982,7 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Hattori Hanzo 50cl<span class="price ">6</span></h3>
-    								<p class="">Doppia IPA 8,3%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
+    								<p class="">Birrificio Mukkeller. Doppia IPA 8,2%. Birra bionda dall'amaro pulito e persistente. Crea dipendenza.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -990,7 +990,7 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Calix Niger 33cl<span class="price ">6</span></h3>
-    								<p class="">Chocolate Stout 6,7%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: glutine</small></span></p>
+    								<p class="">Birrificio dei Castelli. Stout 6,7%. Color ebano scuro, schiuma compatta dai toni nocciola. Al naso elegante sentore di caffè e note di quercia.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
     					</div>
