--- a/menu.html
+++ b/menu.html
@@ -1199,14 +1199,14 @@
     			<div class="small-12 cell">
     				<h2>Whiskey</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Scallywag<span class="price ">8</span></h3>
-    								<p class="">Scozzese blend 46%. L&#x27;iniziale dolcezza lascia spazio a note piccanti e speziate.<span class="hide"><br><small>Allergeni: </small></span></p>
+    								<h3>Arran<span class="price ">8</span></h3>
+    								<p class="">Scotch whisky Single Malt 43%. Invecchiato per circa 7 anni in botti di primo utilizzo ex-bourbon e imbottigliato col suo colore naturale. Aromi dolci e freschi di agrumi e vaniglia. Gusto fresco di mela e agrumi.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1219,7 +1219,7 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Big Peat<span class="price ">8</span></h3>
-    								<p class="">Scozzese blend 46%. Fresco e pulito con aromi di torba piccante con note di cioccolato, caffè e mandorle.<span class="hide"><br><small>Allergeni: </small></span></p>
+    								<p class="">Scozzese blend 46%. Fresco, pulito con aromi di torba piccante con note di cioccolato, caffè e mandorle. Sapore semplice e facile da bere con note di fumo pesante, erba tagliata, spezie, spiagge e torba. Persistente con note salate, fumo e cenere di falò.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
     					</div>
