--- a/menu.html
+++ b/menu.html
@@ -618,7 +618,7 @@
     			<div class="small-12 cell">
     				<h2>Carne</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/CostineinSalsaBBQ_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Costine in Salsa BBQ">
@@ -626,7 +626,7 @@
     								<p>Baby ribs di suino allevato allo stato brado in salsa bbq. Servite con patate fritte.<span class=""><br><small>Allergeni: Anidride Solforosa e Solfiti, Glutine, Pesce, Semi di Sesamo</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
