--- a/asporto.html
+++ b/asporto.html
@@ -801,7 +801,7 @@
     				</section>
     				<section class="grid-x grid-margin-x grid-margin-y" id="hamburger" data-magellan-target="hamburger">
     					<div class="small-12 cell">
-    						<h2>Hamburger Classici<small>Serviti con patate fritte e a cottura media</small></h2>
+    						<h2>Hamburger Classici<small>Serviti a cottura media e con patate fritte</small></h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
     								<div class="hide-for-medium">
@@ -870,7 +870,7 @@
     						</div>
     					</div>
     					<div class="small-12 cell">
-    						<h2>Hamburger di Stagione<small>Serviti con patate fritte e a cottura media</small></h2>
+    						<h2>Hamburger di Stagione<small>Serviti a cottura media e con patate fritte</small></h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
     								<div class="hide-for-medium">
