--- a/menu.html
+++ b/menu.html
@@ -383,7 +383,7 @@
     		</section>
     		<section class="grid-x grid-margin-x grid-margin-y" id="hamburger" data-magellan-target="hamburger">
     			<div class="small-12 cell">
-    				<h2>Hamburger Classici<small>Serviti con patate fritte e a cottura media</small></h2>
+    				<h2>Hamburger Classici<small>Serviti a cottura media e con patate fritte</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
     					<div class="cell">
     						<div class="card">
@@ -478,7 +478,7 @@
     				</div>
     			</div>
     			<div class="small-12 cell">
-    				<h2>Hamburger di Stagione<small>Serviti con patate fritte e a cottura media</small></h2>
+    				<h2>Hamburger di Stagione<small>Serviti a cottura media e con patate fritte</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
     					<!-- <div class="cell">
     						<div class="card">
@@ -503,7 +503,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Greco_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe">
     								<h3>Greco<span class="price ">10,5</span></h3>
-    								<p>Burger di manzo (180 grammi), melanzana grigliata, insalata riccia, salsa tzatziki. Servito con patatine e a cottura media.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Burger di manzo (180 grammi), melanzana grigliata, insalata riccia, salsa tzatziki.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -512,7 +512,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/GrecoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe Doppio">
     								<h3>Greco Doppio<span class="price ">14,5</span></h3>
-    								<p>Doppio burger di manzo (360 grammi), melanzana grigliata, insalata riccia, salsa tzatziki. Servito con patatine e a cottura media.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Doppio burger di manzo (360 grammi), melanzana grigliata, insalata riccia, salsa tzatziki.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -591,7 +591,7 @@
     				</div>
     			</div>
     			<div class="small-12 cell">
-    				<h2>Hamburger Vegetariani<small>Serviti con patate fritte e a cottura media</small></h2>
+    				<h2>Hamburger Vegetariani<small>Serviti con patate fritte</small></h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
     					<div class="cell">
     						<div class="card">
@@ -618,7 +618,7 @@
     			<div class="small-12 cell">
     				<h2>Carne</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/CostineinSalsaBBQ_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Costine in Salsa BBQ">
@@ -626,7 +626,7 @@
     								<p>Baby ribs di suino allevato allo stato brado in salsa bbq. Servite con patate fritte.<span class=""><br><small>Allergeni: Anidride Solforosa e Solfiti, Glutine, Pesce, Semi di Sesamo</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
