--- a/menu.html
+++ b/menu.html
@@ -444,7 +444,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Pollo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Pollo">
     								<h3>Pollo<span class="price ">10,9</span></h3>
-    								<p>Burger di pollo (180 grammi), fontina, cipolla caramellata, rucola, salsa allo yogurt.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Burger di pollo (180 grammi), fontina, cipolla caramellata, rucola, salsa allo yogurt. Servito ben cotto.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -453,7 +453,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/PolloDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Pollo Doppio">
     								<h3>Pollo Doppio<span class="price ">14,9</span></h3>
-    								<p>Doppio burger di pollo (360 grammi), fontina, cipolla caramellata, rucola, salsa allo yogurt.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Doppio burger di pollo (360 grammi), fontina, cipolla caramellata, rucola, salsa allo yogurt. Servito ben cotto.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
