--- a/menu.html
+++ b/menu.html
@@ -231,7 +231,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/HosomakiSpecialSalmone_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Hosomoki Special Salmone">
@@ -239,7 +239,7 @@
     								<p>Hosomaki di salmone ricoperto da philadelphia, fragole e salsa teriyaki (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Pesce, Soia, Latte, Senape</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     				</div>
     			</div>
                 <div class="small-12 cell">
@@ -805,7 +805,15 @@
     							</div>
     						</div>
     					</div>
-                      <!--  <div class="cell">
+                        <!-- <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Bonsai<span class="price "></span></h3>
+                                    <p class="">English pale Ale 5,o%. Birrificio Resina.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div> -->
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Sofronia<span class="price "></span></h3>
