--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -75,7 +75,7 @@
             <div class="small-12 cell" id="innerNotesDiv2">
             </div>
             <div class="small-12 cell table-scroll" id="innerNotesDiv">
-                <table id="shiftsTable" style="table-layout: auto; width:auto; font-size: 0.875rem;">
+                <table id="shiftsTable" style="table-layout: auto; width:auto; font-size: 0.875rem; white-space: nowrap;">
                     <caption class="text-left" style="font-size: 1rem;padding-left:0rem;">Numero persone per turno</caption>
                     <thead>
                         <tr>
@@ -87,7 +87,7 @@
                     </thead>
                     <tbody id="shiftsTableBody" style="text-align:center;"></tbody>
                 </table>
-                <table id="notesTable" class="extra-space" style="table-layout: auto; width:auto; font-size: 0.875rem;">
+                <table id="notesTable" class="extra-space" style="table-layout: auto; width:auto; font-size: 0.875rem; white-space: nowrap;">
                     <caption class="text-left" style="font-size: 1rem; padding-left:0rem;">Prenotazioni online</caption>
                     <thead>
                         <tr>
@@ -104,7 +104,7 @@
                     </thead>
                     <tbody id="notesTableBody" style="text-align:center;"></tbody>
                 </table>
-                <table id="anonTable" class="extra-space" style="table-layout: auto; width:auto; font-size: 0.875rem;">
+                <table id="anonTable" class="extra-space" style="table-layout: auto; width:auto; font-size: 0.875rem; white-space: nowrap;">
                     <caption class="text-left" style="font-size: 1rem;padding-left:0rem;">Prenotazioni da Scloby senza turno</caption>
                     <thead>
                         <tr>
