--- a/menu.html
+++ b/menu.html
@@ -1097,8 +1097,8 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <h3>Prosecco Eres docg<span class="price ">18 | 4</span></h3>
-                                    <p class="">Cantina Serre di Pederiva. Extra Brut. All’aspetto è giallo paglierino scarico con riflessi verdognoli, con spuma brillante e perlage fine e persistente. Frutta fresca e fiori estivi ne completano il profumo particolarmente secco e croccante.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
+                                    <h3>Prosecco Treser docg<span class="price ">18 | 4</span></h3>
+                                    <p class="">CCantina Serre di Pederiva. Brut. All’aspetto è giallo paglierino scarico con riflessi verdognoli, con spuma brillante e perlage fine e persistente. Frutta fresca e fiori estivi ne completano il profumo secco e croccante.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
                                 </div>
                             </div>
                         </div>
