--- a/menu.html
+++ b/menu.html
@@ -1098,7 +1098,7 @@
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Prosecco Treser docg<span class="price ">18 | 4</span></h3>
-                                    <p class="">CCantina Serre di Pederiva. Brut. All’aspetto è giallo paglierino scarico con riflessi verdognoli, con spuma brillante e perlage fine e persistente. Frutta fresca e fiori estivi ne completano il profumo secco e croccante.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
+                                    <p class="">Cantina Serre di Pederiva. Brut. All’aspetto è giallo paglierino scarico con riflessi verdognoli, con spuma brillante e perlage fine e persistente. Frutta fresca e fiori estivi ne completano il profumo secco e croccante.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
                                 </div>
                             </div>
                         </div>
