better layout dashboard

--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -75,14 +75,14 @@
             <div class="small-12 cell" id="innerNotesDiv2">
             </div>
             <div class="small-12 cell table-scroll" id="innerNotesDiv">
-                <table id="shiftsTable" style="table-layout: auto; width:auto; font-size: 0.875rem; white-space: nowrap;">
+                <table id="shiftsTable" style="table-layout: auto; width:auto; font-size: 0.875rem;white-space: nowrap;">
                     <caption class="text-left" style="font-size: 1rem;padding-left:0rem;">Numero persone per turno</caption>
                     <thead>
                         <tr>
                             <th>Turno</th>
-                            <th>Nr. Persone Totali</th>
-                            <th>Nr. Persone Prenotate online</th>
-                            <th>Nr. Persone Prenotate da Scloby</th>
+                            <th>Nr. Persone<br>Totali</th>
+                            <th>Nr. Persone<br>Prenotate Online</th>
+                            <th>Nr. Persone<br>Prenotate da Scloby</th>
                         </tr>
                     </thead>
                     <tbody id="shiftsTableBody" style="text-align:center;"></tbody>
