--- a/menu.html
+++ b/menu.html
@@ -797,22 +797,22 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Palmares<span class="price "></span></h3>
     								<p class="">Red Ale 5,6%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
-                        <!-- <div class="cell">
+    					</div> -->
+                        <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Bonsai<span class="price "></span></h3>
-                                    <p class="">English pale Ale 5,o%. Birrificio Resina.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                    <p class="">Bitter Inglese 5,0%. Birrificio Resina.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                         <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
