--- a/menu.html
+++ b/menu.html
@@ -809,7 +809,7 @@
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Bonsai<span class="price "></span></h3>
-                                    <p class="">Bitter Inglese 5,0%. Birrificio Resina.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                    <p class="">Bitter inglese bionda 5,0%. Birrificio Resina.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
                         </div>
