--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     			</div>
     			<div class="medium-6 cell small-order-2 medium-order-1">
     				<p>La nostra idea di cucina, la nostra storia e l'esperienza che vivrai a Ca' Vecchia Beerstrot. Come contattarci, come raggiungerci, le risposte alle domande più frequenti e le informazioni legali.</p>
-        				<a href="chi-siamo.html" class="button">Chi Siamo</a>
+        				<a href="chi-siamo.html" class="button">Scopri Chi Siamo</a>
         			</div>
     			</div>
     		</div>
