--- a/menu.html
+++ b/menu.html
@@ -821,6 +821,14 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Una Tantum<span class="price "></span></h3>
+                                    <p class="">West Coast IPA 6%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -869,14 +877,14 @@
     							</div>
     						</div>
     					</div> -->
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Hattori Hanzo<span class="price "></span></h3>
     								<p class="">Doppia IPA 8,3%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
