--- a/menu.html
+++ b/menu.html
@@ -86,7 +86,7 @@
     			<div class="small-12 cell">
     				<h2>Sushi i Nostri Signature</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
+    				<!--	<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/RollSpecialTonno_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Roll Special Tonno">
@@ -94,7 +94,7 @@
     								<p>Tonno e mango ricoperti da tartare di tonno, maionese e granella di pistacchio (8 pezzi).<span class=""><br><small>Allergeni: Uova, Pesce, Soia, Frutta a guscio</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -222,7 +222,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    				<!--	<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/HosomakiVegetariano_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Hosomaki Vegetariano">
@@ -230,8 +230,8 @@
     								<p>Hosomaki di avocado, cetriolo e mango (8 pezzi).<span class=""><br><small>Allergeni: Soia</small></span></p>
     							</div>
     						</div>
-    					</div>
-    					<div class="cell">
+    					</div>. -->
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/HosomakiSpecialSalmone_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Hosomoki Special Salmone">
@@ -239,7 +239,7 @@
     								<p>Hosomaki di salmone ricoperto da philadelphia, fragole e salsa teriyaki (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Pesce, Soia, Latte, Senape</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     				</div>
     			</div>
                 <div class="small-12 cell">
