--- a/menu.html
+++ b/menu.html
@@ -360,7 +360,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Arrosticini_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Arrosticini">
@@ -368,7 +368,7 @@
     								<p>Arrosticini di pecora.<span class=""><br><small>Allergeni: --</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
