--- a/menu.html
+++ b/menu.html
@@ -986,14 +986,14 @@
     							</div>
     						</div>
     					</div>
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Mazzu de Fiuri 50cl<span class="price ">6</span></h3>
                                     <p class="">Birrificio Mukkeller. IPA 6%. Birra bionda dall'amaro persistente e speziato.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
