--- a/menu.html
+++ b/menu.html
@@ -789,14 +789,14 @@
     							</div>
     						</div>
     					</div>
-    				<!--	<div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Bock<span class="price "></span></h3>
     								<p class="">Rossa stile tedesco dolce 6,5%. Birrificio Forst.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div> 
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1046,14 +1046,14 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Serrano Rosso Conero doc<span class="price ">14,5 | 3,5</span></h3>
     								<p class="">Cantina Umani Ronchi. Colore rosso rubino con riflessi violacei. Profumo pulito di visciola matura. Gran polpa e gran rotondità di sapore, uniti ad una buona struttura garantiscono una piacevole bevibilità.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
