--- a/asporto.html
+++ b/asporto.html
@@ -109,7 +109,7 @@
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
     				<li><a href="#sushi">Sushi</a></li>
     				<li><a href="#stuzzicare">Per Stuzzicare</a></li>
-    				<li><a href="#hamburger">Hamburger</a></li>
+    				<!-- <li><a href="#hamburger">Hamburger</a></li> -->
     				<li><a href="#carne">Carni</a></li>
     				<li><a href="#dolce">Dolci</a></li>
     				<li><a href="#bevanda">Bevande</a></li>
@@ -800,7 +800,7 @@
     					</div>
     				</section>
     				<section class="grid-x grid-margin-x grid-margin-y" id="hamburger" data-magellan-target="hamburger">
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Hamburger Classici<small>Serviti a cottura media e con patate fritte</small></h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -869,7 +869,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Hamburger di Stagione<small>Serviti a cottura media e con patate fritte</small></h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -938,7 +938,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Hamburger Vegetariani<small>Serviti con patate fritte</small></h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
