--- a/menu.html
+++ b/menu.html
@@ -930,14 +930,14 @@
     							</div>
     						</div>
     					</div> -->
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Weisse 50cl<span class="price ">6</span></h3>
     								<p class="">Birrificio Maisel. Weisse tedesca 5,1%. Bionda con prevalenti note di banana.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
