--- a/asporto.html
+++ b/asporto.html
@@ -800,7 +800,7 @@
     					</div>
     				</section>
     				<section class="grid-x grid-margin-x grid-margin-y" id="hamburger" data-magellan-target="hamburger">
-    					<div class="small-12 cell" hidden>
+    					<div class="small-12 cell">
     						<h2>Hamburger Classici<small>Serviti a cottura media e con patate fritte</small></h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -869,7 +869,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell" hidden>
+    					<div class="small-12 cell">
     						<h2>Hamburger di Stagione<small>Serviti a cottura media e con patate fritte</small></h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -938,7 +938,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell" hidden>
+    					<div class="small-12 cell">
     						<h2>Hamburger Vegetariani<small>Serviti con patate fritte</small></h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
