--- a/informazioni-legali.html
+++ b/informazioni-legali.html
@@ -242,7 +242,7 @@
                         <div class="small-12 medium-9 large-7 xxlarge-7 cell">
                             <h3>10. Prezzi e pagamento</h3>
                                 <p>I prezzi sono comprensivi di IVA.</p><p>
-                                </p>Il pagamento per tutti i Prodotti può essere effettuato sul Sito tramite carta di credito o di debito oppure presso i nostri locali al momento del ritiro.
+                                </p>Il pagamento per tutti i Prodotti può essere effettuato <!-- sul Sito tramite carta di credito o di debito oppure --> presso i nostri locali al momento del ritiro.
                         </div>
                         <div class="small-12 medium-9 large-7 xxlarge-7 cell">
                             <h3>11. Responsibilità</h3>
